--- a/views/app/home.jade
+++ b/views/app/home.jade
@@ -1,7 +1,12 @@
 extends ../layout.jade
 block contenido
-	h4 hola : #{user1.username}
-	h4 tu correo : #{user1.email}
-	h4 tu id : #{user1.id}
+	p Nombre de Usuario : #{user1.username}
+	p Email : #{user1.email}
+	p Id_Usaurio: #{user1.id}
+	for imagen in imagenes
+		div(class="img-container")
+			h2=imagen.title
+			img(src="/public/imagenes/#{imagen._id}.#{imagen.extension}",class="main-img")
+			p Por #{imagen.creator.email}
 
 	
