--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends ./layout.jade
 block contenido
 	div(class="col-md-8 remove-float center-block text-center big-top-space")
-		h1 Bienvenido a Sitio web de UAJMS-Yacuiba
+		h1 Bienvenido a Sitio web para consultas medicas
 		h2 Si ve este mensaje todo esta todo bien
 		a(href="/login" class="right_space") iniciar sesion
 		a(href="/signup") Registro
