--- a/views/layout.jade
+++ b/views/layout.jade
@@ -12,9 +12,13 @@ html(lang="es")
 				li 
 					a(href="/app") Inicio
 				li
-					a(href="/app/imagenes/new") Mis imagenes
+					a(href="/app/imagenes/") Mis imagenes
+				li
+					a(href="/app/imagenes/new") subir imagen
 				li 
 					a(href="/app/chat/nuevo") Chat
 				li 
-					a(href="/consultas") Consultas
+					a(href="/transmitir") transmitir
+				li 
+					a(href="/receptor") ver transmision
 		block contenido
